--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "Tatyana Granchenko",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
     "del": "^3.0.0",
+    "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
+    "gulp-autopolyfiller": "^1.2.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^6.1.2",
     "gulp-cache": "^1.0.1",
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
@@ -20,6 +24,7 @@
     "gulp-html-minifier": "^0.1.8",
     "gulp-imagemin": "^3.4.0",
     "gulp-notify": "^3.0.0",
+    "gulp-order": "^1.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-rsync": "0.0.8",
     "gulp-sass": "^3.1.0",
