--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
+    "critical": "^1.1.0",
     "del": "^3.0.0",
     "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
